trunk/Archive2/44/a2419071d8bbc8/main.cpp
#include <vector>

class Foo;
class Bar;

std::vector<Foo> foos;
std::vector<Bar> bars;

int main() {}